--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -21,7 +21,7 @@
 							<img src="/images/products/<%=products[i].image%>" alt="imagen de producto">
 						</figure>
 						<article class="product-box_data">
-							<h2>$<%= (products[i].price-(products[i].discount*products[i].price/100))%></h2>
+							<h2>$<%= finalPrice(products[i].price,products[i].discount)%></h2>
 							<%if(products[i].discount!=0){%>
 							<span><%= products[i].discount%> % OFF: </span>
 							<% } %>
